--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <input type="text" class="query" placeholder="Search..."></input>
         <button class="search-button">Search</button>
         <button class="random-button">Random</button>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="info">
+        <div><h5 class="small">Currently, there are </h5><h5 class="pages small">-1</h5><h5 class="small"> BussPages out there.</h5></div>
+        <div><h5 class="small">We have filtered out </h5><h5 class="ip small">-1</h5><h5 class="small"> BussPages with invalid IPs.</h5></div>
+        </div>
     </div>
     <p class="errors">Visit my other BussPages</p>
     <div class="categories">
