--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <div><a href="buss://cornhub.uwu" class="category">cornhub.uwu</a></div>
     </div>
     <hr>
+    <p>Since the domain registrar got botted with domains that use IPv4 IPs, I have decided to not return those results when the 'random' button is pressed.
+They do still show up when you use the 'search' functionality.</p>
+    <hr>
+    <div></div>
 </div>
 <div class="main">
     <div class="results">
