Added favourites bar

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
         <div><h5 class="small">We have filtered out </h5><h5 class="ip small">-1</h5><h5 class="small"> BussPages with invalid IPs.</h5></div>
         </div>
     </div>
-    <p class="errors">Visit my other BussPages</p>
+    <p class="errors">My favourite BussPages</p>
     <div class="categories">
         <div><p class="active-category category">Home</p></div>
-        <div><a href="buss://cornhub.uwu" class="category">cornhub.uwu</a></div>
+        <div><a href="buss://register.it" class="category">register.it</a></div>
+        <div><a href="buss://search.it" class="category">search.it</a></div>
+        <div><a href="buss://weather.now" class="category">weather.now</a></div>
+
+
     </div>
     <hr>
     <p>Since the domain registrar got botted with domains that use IPv4 IPs, I have decided to not return those results when the 'random' button is pressed.
