--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <div><a href="buss://register.it" class="category">register.it</a></div>
         <div><a href="buss://search.it" class="category">search.it</a></div>
         <div><a href="buss://weather.now" class="category">weather.now</a></div>
-
-
+        <div><a href="buss://botted.uwu" class="category">botted.uwu</a></div>
     </div>
     <hr>
     <p>Since the domain registrar got botted with domains that use IPv4 IPs, I have decided to not return those results when the 'random' button is pressed.
