--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div></div>
         <div class="info">
         <div><h5 class="small">Currently, there are </h5><h5 class="pages small">-1</h5><h5 class="small"> BussPages out there.</h5></div>
-        <div><h5 class="small">We have filtered out </h5><h5 class="ip small">-1</h5><h5 class="small"> BussPages with invalid IPs.</h5></div>
+        <div><h5 class="small">We have filtered out </h5><h5 class="ip small">-1</h5><h5 class="small"> BussPages with invalid, or malicious, IPs.</h5></div>
         </div>
     </div>
     <p class="errors">My favourite BussPages</p>
